--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     oracle_container:
       image: store/oracle/database-enterprise:12.2.0.1-slim
       volumes:
-        - C:\Users\arago\Documents\pasantia\docker-oracle\volumen\data:/opt/oracle/data # persistent oracle database data.
+        - /home/aragon/pasantia/docker-oracle/volumen/data:/opt/oracle/data # persistent oracle database data.
       ports:
         - 1521:1521
